--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,19 +47,18 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'android.arch.paging:runtime:1.0.1'
-    implementation "com.google.android:flexbox:2.0.1"
     implementation 'com.vanniktech:emoji-material:0.7.0'
     implementation 'com.vanniktech:emoji-google:0.7.0'
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinStdlibJdk7Version"
 
     implementation "androidx.room:room-runtime:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
 
-    implementation('org.jitsi.react:jitsi-meet-sdk:') { transitive = true }
+    implementation('org.jitsi.react:jitsi-meet-sdk:3.+') { transitive = true }
     //implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
@@ -72,12 +71,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
 
-    implementation 'com.firebaseui:firebase-ui-firestore:6.2.1'
-    implementation 'com.firebaseui:firebase-ui-database:6.2.1'
+    implementation "com.firebaseui:firebase-ui-firestore:$firebaseUiFirestoreVersion"
+    implementation "com.firebaseui:firebase-ui-database:$firebaseUiDatabaseVersion"
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
