--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    firebaseUiFirestoreVersion = '6.2.1'
+    firebaseUiDatabaseVersion = '6.2.1'
+    kotlinStdlibJdk7Version = '1.5.2'
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         google()
@@ -6,7 +10,7 @@ buildscript {
         maven { url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.1'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
 
         classpath 'com.google.gms:google-services:4.3.10'
