--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinStdlibJdk7Version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.2"
 
     implementation "androidx.room:room-runtime:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
@@ -60,7 +60,7 @@ dependencies {
 
     implementation('org.jitsi.react:jitsi-meet-sdk:3.+') { transitive = true }
     //implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
+    //implementation "com.yqritc:android-scalablevideoview:1.0.4"
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
@@ -70,15 +70,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
-
-    implementation "com.firebaseui:firebase-ui-firestore:$firebaseUiFirestoreVersion"
-    implementation "com.firebaseui:firebase-ui-database:$firebaseUiDatabaseVersion"
+    implementation 'com.firebaseui:firebase-ui-firestore:7.2.0'
+    implementation 'com.firebaseui:firebase-ui-database:7.2.0'
+    //implementation 'com.yqritc:android-scalablevideoview:1.0.4'
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    testImplementation 'junit:junit:'
+    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
