--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        jcenter()
         maven { url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases" }
 
     }
@@ -12,6 +13,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter()
         maven { url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases" }
     }
 }
